add: compare logic
