# server/services/favorite.service.js
@@ -1,5 +1,15 @@
 import ApiError from '../exeptions/apiError.js';
-import { Favorite, Product, User } from '../models/models.js';
+import {
+  Brand,
+  Category,
+  Favorite,
+  Product,
+  ProductImage,
+  ProductImageInter,
+  ProductInfo,
+  User,
+} from '../models/models.js';
+import productService from './product.service.js';
 
 class FavoriteService {
   async add(productId, userId) {
@@ -21,7 +31,47 @@ class FavoriteService {
       throw ApiError.NOT_FOUND('User not found');
     }
 
-    return await Favorite.findAll({ where: { userId } });
+    const response = await Favorite.findAll({
+      where: { userId },
+      attributes: {
+        exclude: ['createdAt', 'updatedAt', 'productId'],
+      },
+      include: {
+        model: Product,
+        include: [
+          {
+            model: Category,
+            attributes: ['name'],
+          },
+          {
+            model: Brand,
+            attributes: ['name'],
+          },
+          {
+            model: ProductInfo,
+          },
+          {
+            model: ProductImage,
+            attributes: ['image'],
+          },
+          {
+            model: ProductImageInter,
+            attributes: ['image'],
+          },
+        ],
+        attributes: ['id', 'title', 'price', 'year', 'hours'],
+      },
+    });
+
+    const favorites = response.map((el) => {
+      return {
+        id: el.id,
+        userId: el.userId,
+        product: productService.prepareProduct(el.product),
+      };
+    });
+
+    return favorites;
   }
 
   async remove(productId, userId) {
